--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "splab-slack-bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "dev": "nodemon ./src/app.ts"
+    "dev": "nodemon ./src/index.ts"
   },
   "dependencies": {
     "@slack/bolt": "^3.12.2",
-    "dotenv": "^16.0.3"
+    "@types/axios": "^0.14.0",
+    "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
+    "node-cron": "^3.0.2"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/node": "^18.15.11",
+    "@types/node-cron": "^3.0.7",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
