--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - run: yarn install --frozen-lockfile
     - run: pm2 delete "splab-slack-bot"
     - run: pm2 start yarn --interpreter bash --name "splab-slack-bot" -- dev
