--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,5 +20,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: yarn install --frozen-lockfile
-    - run: pm2 delete "splab-slack-bot"
+    - run: pm2 kill
     - run: pm2 start yarn --interpreter bash --name "splab-slack-bot" -- dev
