--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
+          cache: 'npm'
+      - run: npm install -g yarn
       - run: yarn install --frozen-lockfile
       - run: pm2 kill
       - run: pm2 start yarn --interpreter bash --name "splab-slack-bot" -- dev
