--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,12 +16,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - run: npm install -g yarn
+          node-version: 18
       - run: yarn install --frozen-lockfile
       - run: pm2 kill
       - run: pm2 start yarn --interpreter bash --name "splab-slack-bot" -- dev
