chore: update deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,5 @@ jobs:
         run: yarn build
       - name: Start running
         run: |
-          pm2 kill
-          pm2 start npm --name "splab-slack-bot" -- start
+          pm2 reload "splab-slack-bot"
           pm2 list
