--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@slack/bolt": "^3.12.2",
+    "@slack/socket-mode": "^1.3.2",
     "@types/axios": "^0.14.0",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
