Add SENDTIME_API_URL to .env

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,4 @@ SLACK_BOT_TOKEN=xoxb-your-bot-token
 SLACK_APP_TOKEN=xapp-your-app-token
 IS_PRODUCTION=false
 TZ=Asia/Seoul
+SENDTIME_API_URL=https://dev-api.sendtime.app
