--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,5 @@ SLACK_APP_TOKEN=xapp-your-app-token
 IS_PRODUCTION=false
 TZ=Asia/Seoul
 SENDTIME_API_URL=https://dev-api.sendtime.app
+SENDTIME_USER_ID=example@splab.dev
+SENDTIME_USER_PW=password
