--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,8 @@ jobs:
           echo IS_PRODUCTION=true >> .env
           echo TZ=Asia/Seoul >> .env
           echo SENDTIME_API_URL=https://api.sendtime.app >> .env
+          echo SENDTIME_USER_ID=${{ secrets.SENDTIME_USER_ID }} >> .env
+          echo SENDTIME_USER_PW=${{ secrets.SENDTIME_USER_PW }} >> .env
       - name: Install packages
         run: yarn install --frozen-lockfile
       - name: Build
