--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   },
   "dependencies": {
     "@slack/bolt": "^3.12.2",
-    "@types/axios": "^0.14.0",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "redis": "^4.6.11"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/dotenv": "^8.2.0",
     "@types/node": "^18.15.11",
     "@types/node-cron": "^3.0.7",
+    "@types/redis": "^4.0.11",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
