Add REDIS_URL to .env

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,4 @@ TZ=Asia/Seoul
 SENDTIME_API_URL=https://dev-api.sendtime.app
 SENDTIME_USER_ID=example@splab.dev
 SENDTIME_USER_PW=password
+REDIS_URL=redis://default@localhost:6379
