--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@slack/bolt": "^3.12.2",
+    "@types/color": "^3.0.6",
     "axios": "^1.3.4",
+    "color": "^4.2.3",
     "dotenv": "^16.0.3",
     "node-cron": "^3.0.2",
     "redis": "^4.6.11"
