--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "axios": "^1.3.4",
     "color": "^4.2.3",
     "dotenv": "^16.0.3",
+    "lodash": "^4.17.21",
     "node-cron": "^3.0.2",
     "redis": "^4.6.11"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/dotenv": "^8.2.0",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^18.15.11",
     "@types/node-cron": "^3.0.7",
     "@types/redis": "^4.0.11",
