--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "axios": "^1.3.4",
     "color": "^4.2.3",
     "dotenv": "^16.0.3",
+    "google-auth-library": "^9.4.1",
+    "google-spreadsheet": "^4.1.1",
+    "libphonenumber-js": "^1.10.52",
     "lodash": "^4.17.21",
     "node-cron": "^3.0.2",
     "redis": "^4.6.11"
@@ -21,6 +24,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/dotenv": "^8.2.0",
+    "@types/google-spreadsheet": "^4.0.0",
     "@types/lodash": "^4.14.202",
     "@types/node": "^18.15.11",
     "@types/node-cron": "^3.0.7",
